Database setup and deleted unnecesary code.
