# models/work-type.js
@@ -1,13 +1,0 @@
-'use strict';
-
-const Bookshelf = require('../bookshelf');
-
-require('./work');
-
-module.exports = Bookshelf.model('WorkType', {
-	tableName: 'work_types',
-
-	data: function() {
-		return this.hasMany('Work', 'type_id');
-	},
-});
