# routes.js
@@ -12,9 +12,6 @@ const AuthMiddleware = require('./middleware/auth');
 const AuthController = require('./controllers/auth');
 const UserController = require('./controllers/user');
 const VerifyController = require('./controllers/verify');
-const ProjectController = require('./controllers/project');
-const WorkTypeController = require('./controllers/work-type');
-const WorkController = require('./controllers/work');
 
 // Create koa router instance.
 let router = new KoaRouter({
@@ -31,11 +28,6 @@ router.registerMiddleware('body', koaBody({
 	strict: false,
 }));
 router.registerMiddleware('auth', AuthMiddleware.auth);
-// router.registerMiddleware('autoAuth', AuthMiddleware.autoAuth); // Automatically login as super admin.
-// router.registerMiddleware('user', AuthMiddleware.roles(['user']));
-// router.registerMiddleware('freelancer', AuthMiddleware.roles(['freelancer']));
-// router.registerMiddleware('brand', AuthMiddleware.roles(['brand']));
-// router.registerMiddleware('admin', AuthMiddleware.roles(['admin']));
 
 /***********************************************************************************
  *
@@ -56,16 +48,11 @@ router.post('auth.login', '/auth/login', AuthController.login);
 // User register.
 router.post('users.store', '/users', UserController.store);
 router.get('users.email.show', '/users/email', UserController.showEmail);
-// router.get('users.show.email', '/users/email', UserController.showEmail);
-// router.post('users.store', '/users', UserController.store);
 
 // Verification.
 router.post('verify.sendEmail', '/verify/send/email', VerifyController.sendVerifyEmail);
 router.post('verify.verifyToken', '/verify/verify/token', VerifyController.verifyToken);
 router.post('verify.verify', '/verify/verify', VerifyController.verify);
-
-// GDPR.
-// router.get('gdpr.index', '/gdpr', GdprController.index);
 
 // Auth group. Any routes in this group need to pass the "AuthMiddleware.auth" middleware.
 router.group('auth', () => {
@@ -78,25 +65,6 @@ router.group('auth', () => {
 	router.get('users.showMe', '/users/me', UserController.showMe);
 	router.put('users.updateMe', '/users/me', UserController.updateMe);
 	router.del('users.destroyMe', '/users/me', UserController.destroyMe);
-
-	// Project.
-	router.post('project.store', '/project', ProjectController.store);
-	router.get('project.index', '/project/all', ProjectController.index);
-	router.put('project.update', '/project/:id(\\d+)/update', ProjectController.update);
-	router.del('project.delete', '/project/:id(\\d+)/delete', ProjectController.destroy);
-
-	// Work type.
-	router.post('type.store', '/type', WorkTypeController.store);
-	router.get('type.index', '/type/all', WorkTypeController.index);
-	router.put('type.update', '/type/:id(\\d+)/update', WorkTypeController.update);
-	router.del('type.delete', '/type/:id(\\d+)/delete', WorkTypeController.destroy);
-
-	// Work.
-	router.get('work.show', '/work/show', WorkController.showWork);
-	router.post('work.store', '/work', WorkController.storeWork);
-	router.put('work.update', '/work/:id(\\d+)/update', WorkController.updateWork);
-	router.del('work.delete', '/work/:id(\\d+)/delete', WorkController.deleteWork);
-	router.post('work.day', '/work/day', WorkController.dailyWork);
 });
 
 /**
@@ -127,8 +95,8 @@ async function applyUse(app) {
 			version: '1.0.0',
 			title: 'API Explorer ' + process.env.NODE_ENV_ALIAS,
 			description: 'API.',
-			contactName: 'SignApps Team',
-			contactEmail: 'info@signapps.io',
+			contactName: 'Heckatlon Koper',
+			contactEmail: 'mihafink333@gmail.com',
 		});
 		app.use(explorer.apiExplorer());
 	}
